ajustes nos Vos, e inclusao de testes unitarios